@@ -121,11 +121,9 @@ class SwitchValueMapperTest extends AbstractValueMapperTest
         $this->assertEquals('ifb', $result);
     }
 
-    // TODO currently the cases are not sorted by key
     /** @test */
     public function switchUnsorted()
     {
-        $this->markTestSkipped();
         $this->fieldValue = 'value1';
         $config = [
             'switch' => [
